@@ -32,7 +32,7 @@
 
 <body onload="next()">
 
-<h2>SunSpider JavaScript Benchmark <small>(In Progress...)</small></h2>
+<h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark <small>(In Progress...)</small></h2>
 
 <script src="sunspider-test-prefix.js"></script>
 <script>
