@@ -31,12 +31,13 @@
 </head>
 
 <body>
-<h2>SunSpider JavaScript Benchmark Results</h2>
+<h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark Results</h2>
 
 <p><a href="sunspider-driver.html">Run Again</a></p>
 
-<form onsubmit="event.preventDefault(); compare(other.value);">Compare (paste another result URL here and press enter):<br>
-<input style="width: 90%;" name="other" type="text"></input>
+<form onsubmit="event.preventDefault(); compare(other.value);">To compare to another run, paste a saved result URL in the text field below and press enter:<br>
+<input style="width: 90%;" name="other" type="text"></input><br>
+<small>(You can bookmark this results URL for later comparison.)</small>
 </form>
 
 <pre id="console">
