@@ -21,3 +21,10 @@ dd { margin-bottom: 1em; margin-top: 0.5em }
 	     width: 80%;
 	     height: 500px;
  	     border: 2px solid #360D6B }
+
+#logo { float: left;
+        position: relative; 
+        bottom: 0.33em;
+        padding-right: 20px;
+	margin-bottom: -40px; 
+        font-size: 3em }
