@@ -33,7 +33,7 @@
 
 <body>
 
-<h2>SunSpider JavaScript Benchmark</h2>
+<h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark</h2>
 
 <p>This is SunSpider, a JavaScript benchmark. This benchmark tests the
 core JavaScript language only, not the DOM or other browser APIs. It
@@ -69,7 +69,9 @@ singificant.</dd>
 
 </dl>
 
-<a href="sunspider-driver.html">Start Now!</a>
+<p><a href="sunspider-driver.html">Start Now!</a><br>
+<small>(When you run the benchmark, be patient - it loops through all of the
+test cases five times and can take a minute or longer to complete.)</small></p>
 
 </body>
 
